[tool.poetry]
name = "at_coder_contests"
version = "0.1.0"
description = "miwpayou0808's atcoder source codes"
authors = ["mi-24v <miwpayou0808@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
online-judge-tools = "^11.1.3"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
